--- a/index.html
+++ b/index.html
@@ -349,7 +349,10 @@
     </div>
 
     <div class="lg:hidden">
-      <div class="bg-[url('/image/bg-sham.jpg')] bg-cover bg-center">
+      <div
+        class="bg-cover bg-center"
+        style="background-image: url(./image/bg-sham.jpg)"
+      >
         <h1 class="text-red-700 text-7xl font-bold">شام ایرانی</h1>
         <p class="text-black font-bold pt-10">کارگردان: سعید ابوطالب</p>
         <p class="text-white font-bold max-w-7xl mx-auto pt-10">
